--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -33,11 +33,12 @@ on:
 # Declare default permissions as read only.
 permissions: read-all
 
+concurrency:
+  group: pytest-integration-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   pytest:
-    concurrency:
-      group: pytest-${{ github.ref }}
-      cancel-in-progress: true
 
     runs-on: ubuntu-latest
 
@@ -83,10 +84,6 @@ jobs:
 
     # If basic unit tests fail, do not run this job
     needs: pytest
-
-    concurrency:
-      group: integration-${{ github.ref }}
-      cancel-in-progress: true
 
     steps:
       - name: Checkout Repo
