--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -6,7 +6,7 @@ on:
       - opened # default trigger
       - reopened # default trigger
       - synchronize # default trigger
-      - ready_for_review  # don't run on draft PRs
+      - ready_for_review # don't run on draft PRs
       - milestoned # allows us to trigger on bot PRs
     paths:
       - "**"
@@ -39,11 +39,7 @@ concurrency:
 
 jobs:
   pytest:
-
     runs-on: ubuntu-latest
-
-    outputs:
-      repeater_container_id: ${{ steps.run_repeater.outputs.REPEATER_CONTAINER_ID }}
 
     steps:
       - name: Checkout Repo
@@ -74,8 +70,7 @@ jobs:
       - name: Run Repeater
         id: run_repeater
         run: |
-          REPEATER_CONTAINER_ID=$(docker run -p 50051:50051 -d --name=repeater ghcr.io/defenseunicorns/leapfrogai/repeater:dev)
-          echo "REPEATER_CONTAINER_ID=$REPEATER_CONTAINER_ID" >> $GITHUB_OUTPUT
+          docker run -p 50051:50051 -d --name=repeater ghcr.io/defenseunicorns/leapfrogai/repeater:e2e-test
 
       - name: Run Pytest
         run: python -m pytest tests/pytest -v
@@ -108,9 +103,10 @@ jobs:
       - name: Install Python Deps
         run: pip install ".[dev]" "src/leapfrogai_api" "src/leapfrogai_sdk"
 
-      - name: Use Repeater from Previous job
+      - name: Run Repeater
+        id: run_repeater
         run: |
-          docker start ${{ needs.pytest.outputs.REPEATER_CONTAINER_ID }}
+          docker run -p 50051:50051 -d --name=repeater ghcr.io/defenseunicorns/leapfrogai/repeater:e2e-test
 
       - name: Setup UDS Cluster
         uses: ./.github/actions/uds-cluster
