--- a/src/leapfrogai_evals/.env.example
+++ b/src/leapfrogai_evals/.env.example
@@ -22,7 +22,7 @@ NIAH_NUM_COPIES=2
 # Question & Answering
 QA_DATASET=defenseunicorns/LFAI_RAG_qa_v1
 QA_INSTRUCTION_TEMPLATE=DEFAULT_INSTRUCTION_TEMPLATE # this can be either a global or a string
-#QA_VECTOR_STORE_ID=
 QA_NUM_SAMPLES=25
 QA_NUM_DOCUMENTS=5
-QA_CLEANUP_VECTOR_STORE=True
+#QA_VECTOR_STORE_ID= # set this to a vectore store id if you want to use an already existing vector store with the files present
+QA_CLEANUP_VECTOR_STORE=True # recommend setting this to False if a vector store id is provided
