--- a/packages/vllm/.env.example
+++ b/packages/vllm/.env.example
@@ -1,17 +1,18 @@
-export LAI_HF_HUB_ENABLE_HF_TRANSFER="1"
-export LAI_REPO_ID="justinthelaw/Hermes-2-Pro-Mistral-7B-4bit-32g"
-export LAI_REVISION="main"
-export LAI_TENSOR_PARALLEL_SIZE=1
-export LAI_TRUST_REMOTE_CODE=True
-export LAI_MODEL_SOURCE=".model/"
-export LAI_MAX_CONTEXT_LENGTH=32768
-export LAI_STOP_TOKENS='["</s>"]'
-export LAI_PROMPT_FORMAT_CHAT_SYSTEM="<|system|>\n{}<|end|>\n"
-export LAI_PROMPT_FORMAT_CHAT_USER="<|user|>\n{}<|end|>\n"
-export LAI_PROMPT_FORMAT_CHAT_ASSISTANT="<|assistant|>\n{}<|end|>\n"
-export LAI_PROMPT_FORMAT_DEFAULTS_TOP_P=1.0
-export LAI_PROMPT_FORMAT_DEFAULTS_TOP_K=0
-export LAI_ENFORCE_EAGER=False
-export LAI_GPU_MEMORY_UTILIZATION=0.90
-export LAI_WORKER_USE_RAY=True
-export LAI_ENGINE_USE_RAY=True
+LAI_HF_HUB_ENABLE_HF_TRANSFER="1"
+LAI_REPO_ID="justinthelaw/Hermes-2-Pro-Mistral-7B-4bit-32g"
+LAI_REVISION="main"
+LAI_TENSOR_PARALLEL_SIZE=1
+LAI_TRUST_REMOTE_CODE=True
+LAI_MODEL_SOURCE=".model/"
+LAI_MAX_CONTEXT_LENGTH=32768
+LAI_STOP_TOKENS='["</s>"]'
+LAI_PROMPT_FORMAT_CHAT_SYSTEM="<|im_start|>system\n{}<|im_end|>\n"
+LAI_PROMPT_FORMAT_CHAT_USER="<|im_start|>user\n{}<|im_end|>\n"
+LAI_PROMPT_FORMAT_CHAT_ASSISTANT="<|im_start|>assistant\n{}<|im_end|>\n"
+LAI_PROMPT_FORMAT_DEFAULTS_TOP_P=1.0
+LAI_PROMPT_FORMAT_DEFAULTS_TOP_K=0
+LAI_ENFORCE_EAGER=False
+LAI_GPU_MEMORY_UTILIZATION=0.90
+LAI_WORKER_USE_RAY=True
+LAI_ENGINE_USE_RAY=True
+LAI_QUANTIZATION="None"
