--- a/.github/workflows/e2e-registry1-weekly.yaml
+++ b/.github/workflows/e2e-registry1-weekly.yaml
@@ -108,12 +108,14 @@ jobs:
         env:
           SUPABASE_ANON_KEY: ${{ steps.generate_secrets.outputs.ANON_KEY }}
           SUPABASE_PASS: ${{ steps.generate_secrets.outputs.FAKE_PASSWORD }}
-          SUPABASE_EMAIL: doug@uds.dev
+          SUPABASE_EMAIL: integration@uds.dev
           SUPABASE_URL: https://supabase-kong.uds.dev
           # Turn off NIAH tests that are not applicable for integration testing using the Repeater model
           LFAI_RUN_NIAH_TESTS: "false"
         run: |
-          uds zarf connect --name=llama-cpp-python-model --namespace=leapfrogai --local-port=50051 --remote-port=50051
+          uds zarf connect --name=llama-cpp-python-model --namespace=leapfrogai --local-port=50051 --remote-port=50051 &
+          while ! nc -z localhost 50051; do sleep 1; done
+
           make test-user-pipeline
           env $(cat .env | xargs) python -m pytest -v -s tests/integration/api
 
