--- a/src/leapfrogai_ui/.env.example
+++ b/src/leapfrogai_ui/.env.example
@@ -22,6 +22,6 @@ OPENAI_API_KEY=
 # PLAYWRIGHT
 USERNAME=user1@test.com
 PASSWORD=<password>
+# MFA secret is only needed when running playwright tests locally. In the workflow, the keycloak user
+# is created without MFA requirements
 MFA_SECRET=<secret>
-# Service Role key comes from Supabase and allows Playwright to bypass row level security for test setup/cleanup. This is only needed for tests.
-SERVICE_ROLE_KEY=<key>
