--- a/.github/workflows/e2e-registry1-weekly.yaml
+++ b/.github/workflows/e2e-registry1-weekly.yaml
@@ -83,7 +83,7 @@ jobs:
           uds create . --confirm && \
             uds deploy uds-bundle-leapfrogai-amd64-registry1.tar.zst --confirm --no-progress && \
             rm -rf uds-bundle-leapfrogai-amd64-registry1.tar.zst && \
-            docker system prune -af && cd ../../../
+            docker system prune -af
 
       - name: Generate Secrets
         id: generate_secrets
@@ -104,20 +104,22 @@ jobs:
           echo "ANON_KEY is set: ${{ steps.generate_secrets.outputs.ANON_KEY != '' }}"
           echo "SERVICE_KEY is set: ${{ steps.generate_secrets.outputs.SERVICE_KEY != '' }}"
 
-      - name: Run Integration Tests
-        env:
-          SUPABASE_ANON_KEY: ${{ steps.generate_secrets.outputs.ANON_KEY }}
-          SUPABASE_PASS: ${{ steps.generate_secrets.outputs.FAKE_PASSWORD }}
-          SUPABASE_EMAIL: integration@uds.dev
-          SUPABASE_URL: https://supabase-kong.uds.dev
-          # Turn off NIAH tests that are not applicable for integration testing using the Repeater model
-          LFAI_RUN_NIAH_TESTS: "false"
-        run: |
-          uds zarf connect --name=llama-cpp-python-model --namespace=leapfrogai --local-port=50051 --remote-port=50051 &
-          while ! nc -z localhost 50051; do sleep 1; done
+      # TODO: enable for post-0.12.2 release of LeapfrogAI
+      # - name: Run Integration Tests
+      #   if: github.sha == 'YOUR_SPECIFIC_COMMIT_SHA'
+      #   env:
+      #     SUPABASE_ANON_KEY: ${{ steps.generate_secrets.outputs.ANON_KEY }}
+      #     SUPABASE_PASS: ${{ steps.generate_secrets.outputs.FAKE_PASSWORD }}
+      #     SUPABASE_EMAIL: integration@uds.dev
+      #     SUPABASE_URL: https://supabase-kong.uds.dev
+      #     # Turn off NIAH tests that are not applicable for integration testing using the Repeater model
+      #     LFAI_RUN_NIAH_TESTS: "false"
+      #   run: |
+      #     uds zarf connect --name=llama-cpp-python-model --namespace=leapfrogai --local-port=50051 --remote-port=50051 &
+      #     while ! nc -z localhost 50051; do sleep 1; done
 
-          make test-user-pipeline
-          env $(cat .env | xargs) python -m pytest -v -s tests/integration/api
+      #     make test-user-pipeline
+      #     env $(cat .env | xargs) python -m pytest -v -s tests/integration/api
 
       # Backends
       - name: Run Backend E2E Tests
