--- a/.github/workflows/e2e-playwright.yaml
+++ b/.github/workflows/e2e-playwright.yaml
@@ -119,8 +119,10 @@ jobs:
         - name: UI/API/Supabase E2E Playwright Tests
           run: |
             cp src/leapfrogai_ui/.env.example src/leapfrogai_ui/.env
-            mkdir -p playwright/.auth
-            touch playwright/.auth/user.json
+            pwd
+            ls
+            mkdir -p src/leapfrogai_ui/playwright/.auth
+            touch src/leapfrogai_ui/playwright/.auth/user.json
             TEST_ENV=CI USERNAME=doug PASSWORD=$FAKE_E2E_USER_PASSWORD PUBLIC_SUPABASE_ANON_KEY=$ANON_KEY npm --prefix src/leapfrogai_ui run test:integration:ci
 
         # Upload the Playwright report as an artifact
