comment out all but 1 test in chat.test.ts

--- a/src/leapfrogai_ui/.env.example
+++ b/src/leapfrogai_ui/.env.example
@@ -17,7 +17,7 @@ SUPABASE_AUTH_KEYCLOAK_SECRET=<secret>
 #ORIGIN=http://localhost:3000 # set if running in Docker locally (variable is also used in deployment)
 
 #If specified, app will use OpenAI instead of LeapfrogAI
-OPENAI_API_KEY=
+#OPENAI_API_KEY=
 
 # PLAYWRIGHT
 USERNAME=user1@test.com
