--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,11 @@ generate-hashes = true
 
 [tool.ruff]
 target-version = "py311"
-fix = true
+
+[tool.ruff.format]
+quote-style = "double"
+indent-style = "space"
+line-ending = "auto"
 
 [tool.pytest.ini_options]
 addopts = ["--import-mode=importlib"]
