--- a/packages/vllm/.env.example
+++ b/packages/vllm/.env.example
@@ -1,18 +1,11 @@
-LFAI_HF_HUB_ENABLE_HF_TRANSFER="1"
-LFAI_REPO_ID="defenseunicotns/Hermes-2-Pro-Mistral-7B-4bit-32g"
-LFAI_REVISION="main"
-LFAI_TENSOR_PARALLEL_SIZE=1
-LFAI_TRUST_REMOTE_CODE=True
-LFAI_MODEL_SOURCE=".model/"
-LFAI_MAX_CONTEXT_LENGTH=32768
-LFAI_STOP_TOKENS='["</s>"]'
-LFAI_PROMPT_FORMAT_CHAT_SYSTEM="<|im_start|>system\n{}<|im_end|>\n"
-LFAI_PROMPT_FORMAT_CHAT_USER="<|im_start|>user\n{}<|im_end|>\n"
-LFAI_PROMPT_FORMAT_CHAT_ASSISTANT="<|im_start|>assistant\n{}<|im_end|>\n"
-LFAI_PROMPT_FORMAT_DEFAULTS_TOP_P=1.0
-LFAI_PROMPT_FORMAT_DEFAULTS_TOP_K=0
-LFAI_ENFORCE_EAGER=False
-LFAI_GPU_MEMORY_UTILIZATION=0.90
-LFAI_WORKER_USE_RAY=True
-LFAI_ENGINE_USE_RAY=True
-LFAI_QUANTIZATION="None"
+LFAI_REPO_ID="TheBloke/SynthIA-7B-v2.0-GPTQ"
+LFAI_REVISION="gptq-4bit-32g-actorder_True"
+
+VLLM_TENSOR_PARALLEL_SIZE=1
+VLLM_TRUST_REMOTE_CODE=True
+VLLM_MAX_CONTEXT_LENGTH=32768
+VLLM_ENFORCE_EAGER=False
+VLLM_GPU_MEMORY_UTILIZATION=0.90
+VLLM_WORKER_USE_RAY=True
+VLLM_ENGINE_USE_RAY=True
+VLLM_QUANTIZATION="None"
